--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "start": "node --env-file .env  --experimental-strip-types --no-warnings src/server.ts",
     "dev": "node --env-file .env  --experimental-strip-types --no-warnings --watch src/server.ts",
-    "db:seed": "node --env-file .env  --experimental-strip-types --no-warnings --watch src/db/seed.ts"
+    "db:seed": "node --env-file .env  --experimental-strip-types --no-warnings --watch src/db/seed.ts",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "repository": {
     "type": "git",
