feat: add audio transcription and AI-powered question answering
- Add Google Gemini AI integration for audio transcription
- Create audio_chunks table to store transcriptions and embeddings
- Implement upload-audio route for audio file processing
- Add vector embeddings support for semantic search
- Update dependencies to include @google/genai and @fastify/multipart
- Add database migration for audio chunks schema

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ PORT=3333
 
 # Database
 DATABASE_URL=postgresql://docker:docker@localhost:5432/agents
+
+# Gemini API Key
+GEMINI_API_KEY=gemini_api_key
