--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "nlw_agents",
+  "name": "nlw_agents_server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node --env-file .env  --experimental-strip-types --no-warnings src/server.ts",
-    "dev": "node --env-file .env  --experimental-strip-types --no-warnings --watch src/server.ts",
-    "db:seed": "node --env-file .env  --experimental-strip-types --no-warnings --watch src/db/seed.ts",
+    "start": "node --env-file .env --experimental-strip-types --no-warnings src/server.ts",
+    "dev": "node --env-file .env --experimental-strip-types --no-warnings --watch src/server.ts",
+    "db:seed": "node --env-file .env --experimental-strip-types --no-warnings --watch src/db/seed.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio"
@@ -24,7 +24,7 @@
   "homepage": "https://github.com/wesley-ns/nlw_agents#readme",
   "devDependencies": {
     "@biomejs/biome": "2.0.6",
-    "@types/node": "^24.0.11",
+    "@types/node": "^24.0.13",
     "drizzle-kit": "^0.31.4",
     "drizzle-seed": "^0.3.1",
     "typescript": "^5.8.3",
@@ -32,10 +32,12 @@
   },
   "dependencies": {
     "@fastify/cors": "^11.0.1",
+    "@fastify/multipart": "^9.0.3",
+    "@google/genai": "^1.9.0",
     "drizzle-orm": "^0.44.2",
     "fastify": "^5.4.0",
     "fastify-type-provider-zod": "^5.0.2",
     "postgres": "^3.4.7",
-    "zod": "^3.25.76"
+    "zod": "^4.0.5"
   }
 }
